--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Atualizar Planilha Diaria
 
 on:
   schedule:
-    - cron: '0 9 * * *' # Roda todo dia às 06:00 (Horário de Brasília)
+    - cron: '0 11 * * *' # Roda todo dia às 08:00 (Horário de Brasília)
   workflow_dispatch: # Permite que você rode manualmente quando quiser
 
 jobs:
@@ -28,5 +28,5 @@ jobs:
       - name: Salvar alteracoes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "Atualização automática CSV"
-          file_pattern: "noticias_receita.csv" # Mude aqui para .csv
+          commit_message: "Atualização automática: ${{ github.event.head_commit.timestamp }}"
+          file_pattern: "noticias_receita.xlsx"
